--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,7 @@
 <header class="bg-blue-600 text-white p-4">
-    <nav class="flex justify-between items-center max-w-7xl mx-auto px-4">
+    <nav class="flex justify-between items-center max-w-full mr-4 ml-4 px-4 nav-mobile">
         <!-- Linke Seite: Hauptnavigation -->
-        <div class="flex space-x-4">
+        <div class="flex space-x-4 div-mobile">
             <a href="start.html" class="hover:underline">Startseite</a>
             <a href="angebote.html" class="hover:underline">Angebote</a>
             <a href="kategorien.html" class="hover:underline">Kategorien</a>
@@ -15,3 +15,4 @@
         </div>
     </nav>
 </header>
+
