Color, Impressum, Datenschutz
Paar Farben angepasst und allgemeine BG-color hinterlegt. Contentdateien für Impressum und Datenschutz hinterlegt, Texte generiert und eingefügt und mit den jeweiligen Pages verknüpft.

--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,7 @@
-<header class="bg-blue-600 text-white p-4">
-    <nav class="flex justify-between items-center max-w-full mr-4 ml-4 px-4 nav-mobile">
+<header class="bg-green-800 text-white p-4">
+    <nav class="flex justify-between items-center max-w-full mr-4 ml-4 px-4">
         <!-- Linke Seite: Hauptnavigation -->
-        <div class="flex space-x-4 div-mobile">
+        <div class="  flex space-x-4">
             <a href="start.html" class="hover:underline">Startseite</a>
             <a href="angebote.html" class="hover:underline">Angebote</a>
             <a href="kategorien.html" class="hover:underline">Kategorien</a>
@@ -16,3 +16,10 @@
     </nav>
 </header>
 
+
+  <!-- flex justify-between items-center max-w-full mr-4 ml-4 px-4 nav-mobile -->
+  <!-- flex flex-col md:flex-row justify-between items-center px-4 -->
+
+  <!--   flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-4 text-center
+  flex space-x-4 div-mobile
+  -->
