--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-gray-800 text-white p-4 mt-8">
+<footer class="bg-green-900 text-white p-4 mt-8">
     <div class="max-w-7xl mx-auto flex justify-between items-center px-4">
         <!-- Linke Seite: Copyright -->
         <div>
