--- a/components/footer.html
+++ b/components/footer.html
@@ -2,7 +2,7 @@
     <div class="max-w-7xl mx-auto px-4">
         <div class="flex flex-col md:flex-row justify-between items-center gap-4 text-center">
             <div class="order-2 md:order-1">
-                <p>&copy; 2025 Affiliate Website</p>
+                <p>&copy; 2025 FundDepot</p>
             </div>
 
             <div class="order-1 md:order-2 flex gap-6">
